CHANGES - 07/11/2004
--------------------

CHANGES IN Mini-XML 2.1

	- Added mxmlLoadFd() and mxmlSaveFd() functions.
	- Fixed multi-word UTF-16 handling.


CHANGES IN Mini-XML 2.0

	- New programmers manual.
	- Added Visual C++ project files for Microsoft Windows
	  users.
	- Added optimizations to mxmldoc, mxmlSaveFile(), and
	  mxmlIndexNew() (STR #2)
	- mxmlEntityAddCallback() now returns an integer status
	  (STR #2)
	- Added UTF-16 support (input only; all output is UTF-8)
	- Added index functions to build a searchable index of
	  XML nodes.
	- Added character entity callback interface to support
	  additional character entities beyond those defined in
	  the XHTML specification.
	- Added support for XHTML character entities.
	- The mxmldoc utility now produces XML output which
	  conforms to an updated XML schema, described in the file
	  "doc/mxmldoc.xsd".
	- Changed the whitespace callback interface to return
	  strings instead of a single character, allowing for
	  greater control over the formatting of XML files
	  written using Mini-XML.  THIS CHANGE WILL REQUIRE
	  CHANGES TO YOUR 1.x CODE IF YOU USE WHITESPACE
	  CALLBACKS.
	- The mxmldoc utility is now capable of documenting C++
	  classes, functions, and structures, and correctly
	  handles C++ comments.
	- Added new modular tests for mxmldoc.
	- Updated the mxmldoc output to be more compatible with
	  embedding in manuals produced with HTMLDOC.
	- The makefile incorrectly included a "/" separator
	  between the destination path and install path.  This
	  caused problems when building and installing with
	  MingW.


CHANGES IN Mini-XML 1.3

	- Fixes for mxmldoc.
	- Added support for reading standard HTML entity names.
	- mxmlLoadString/File() did not decode character
	  entities in element names, attribute names, or
	  attribute values.
	- mxmlLoadString/File() would crash when loading non-
	  conformant XML data under an existing parent (top)
	  node.
	- Fixed several bugs in the mxmldoc utility.